--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -89,7 +89,8 @@
 	stroke: transparent;
 	fill: transparent;
 }
-.sprotty-graph.edge-modification-not-allowed-mode .sprotty-node:hover .sprotty-port,
+
+.sprotty-graph.edge-modification-not-allowed-mode .sprotty-node.mouseover .sprotty-port,
 .sprotty-graph.edge-creation-select-target-mode .sprotty-node:hover .sprotty-port,
 .sprotty-graph.edge-reconnect-select-target-mode .sprotty-node:hover .sprotty-port {
 	fill: #d4d4d478;	
@@ -99,6 +100,7 @@
 	fill: rgb(85, 87, 83);
 	stroke: #f57900;
 } 
+
 
 
 /*** Gateways ***/
