--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -50,7 +50,7 @@
 .sprotty-label.heading {
     font-weight: normal;
     font-size: 0.7em;
-    fill: #f0f3f8;
+    fill: var(--theia-titleBar-activeForeground);
 }
 
 .sprotty-resize-handle.selected {
