--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -83,6 +83,10 @@
 	fill: #BE5961;
 }
 
+.sprotty-node.event > .bpmn-port {
+	fill: blue;
+}
+
 /*** Ports ***/
 .sprotty-node .sprotty-port {
 	stroke-width: 1;
