--- a/open-bpmn.glsp-client/open-bpmn-properties/css/bpmn-properties.css
+++ b/open-bpmn.glsp-client/open-bpmn-properties/css/bpmn-properties.css
@@ -1,6 +1,26 @@
-
-/* Property Panel inherites from toolpalette */
-
+/********************************************************************************
+ * Copyright (c) 2022 Imixs Software Solutions GmbH,
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 3
+ * of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * General Public License for more details.
+ *
+ * You can receive a copy of the GNU General Public
+ * License at http://www.gnu.org/licenses/gpl.html
+ *
+ * Project:
+ *     https://github.com/imixs/open-bpmn
+ *
+ * Contributors:
+ *     Imixs Software Solutions GmbH - Project Management
+ *     Ralph Soika - Software Developer
+ ********************************************************************************/
 .tool-palette { 
 	z-index: 10;
 }
@@ -49,6 +69,12 @@
 .bpmn-property-header .header-tools .clicked, .bpmn-property-header .header-tools i:hover {
     background: none;
     border: none;
+}
+
+
+
+.bpmn-properties-body {
+    padding: 0px;
 }
 
 
