--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -90,44 +90,16 @@
 	fill: #BE5961;
 }
 
-.event.catchEvent > circle {
-	fill: rgb(211, 215, 207);
+.event.intermediateCatchEvent > circle {
+	fill: #82848a;
 }
-.event.throwEvent > circle {
-	fill: rgb(211, 215, 207);
+.event.intermediateThrowEvent > circle {
+	fill: #82848a;
 }
-
-.sprotty-node.event > .bpmn-port {
-	fill: blue;
-}
-
-/*** Ports ***/
-.sprotty-node .sprotty-port {
-	stroke-width: 1;
-	stroke: transparent;
-	fill: transparent;
-}
-
-
-/*
-.sprotty-graph.edge-modification-not-allowed-mode .sprotty-node.mouseover .sprotty-port,
-.sprotty-graph.edge-creation-select-target-mode .sprotty-node:hover .sprotty-port,
-.sprotty-graph.edge-reconnect-select-target-mode .sprotty-node:hover .sprotty-port {
-	fill: #d4d4d478;	
-}
-.sprotty-graph.edge-creation-select-target-mode .sprotty-node .sprotty-port.mouseover,
-.sprotty-graph.edge-reconnect-select-target-mode .sprotty-node .sprotty-port.mouseover {
-	fill: rgb(85, 87, 83);
-	stroke: #f57900;
-} 
-*/
 
 
 /*** Gateways ***/
 
-.xxxxxxxsprotty-node.gateway > text.heading {
-	text-anchor:middle; 
-}
 .gateway > polygon {
     fill: #C39D5C;
 }
