--- a/open-bpmn.glsp-client/open-bpmn-properties/css/jsonforms-theia.css
+++ b/open-bpmn.glsp-client/open-bpmn-properties/css/jsonforms-theia.css
@@ -29,9 +29,9 @@
 }
 
 .vertical-layout {
-    display: table !important;
-    table-layout: auto;
-    width: 100%;
+	display: flex;
+    flex-direction: row;
+    align-items: flex-start;
     padding: var(--jsonforms-padding);
 }
 .horizontal-layout {
@@ -53,7 +53,7 @@
 
 .vertical-layout-item .control {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 	margin: var(--jsonforms-margin);
     padding-right: var(--jsonforms-padding)
 }
