added extension css classes
Issue #63

--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -78,6 +78,10 @@
     fill: #425C81;
 }
 
+.task.bpmnextension-imixs > .sprotty-node {
+	fill: #7087a9;
+}
+
 /*** Events ***/
 
 .xxxxxxxxsprotty-node.event > text.heading {
