refactoring, example impl
Issue #63

--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -79,7 +79,12 @@
 }
 
 .task.bpmnextension-imixs > .sprotty-node {
-	fill: #7087a9;
+	stroke: darkorange;
+	stroke-width: 1;
+}
+.event.bpmnextension-imixs > .sprotty-node {
+	stroke: darkorange;
+	stroke-width: 1;
 }
 
 /*** Events ***/
