added test models

--- a/open-bpmn.glsp-client/open-bpmn-properties/css/jsonforms-theia.css
+++ b/open-bpmn.glsp-client/open-bpmn-properties/css/jsonforms-theia.css
@@ -176,7 +176,7 @@
 }
 
 .array-table-layout.control>table>thead {
-    display: none;
+    xdisplay: none;
 }
 
 .array-table-layout.control>table>tbody>tr>td>input {
