--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -50,13 +50,7 @@
 .sprotty-label.heading {
     font-weight: normal;
     font-size: 0.7em;
-    fill: var(--theia-titleBar-activeForeground);
-}
-
-.sprotty-label.BPMNLabel {
-    font-weight: normal;
-    font-size: 0.7em;
-    fill: var(--theia-titleBar-activeForeground);
+    fill: #f0f3f8;
 }
 
 
@@ -73,6 +67,16 @@
     fill: transparent;
 }
 
+.bpmn.label > .sprotty-node {
+	fill: transparent;
+}
+
+.bpmn.label > .sprotty-label.heading {
+	fill: var(--theia-titleBar-activeForeground);
+}
+.bpmn.label > .sprotty-node.mouseover {
+	fill: var(--theia-activityBar-background);
+}
 
 .task > .sprotty-node {
     fill: #425C81;
@@ -89,9 +93,7 @@
 
 /*** Events ***/
 
-.xxxxxxxxsprotty-node.event > text.heading {
-	text-anchor:middle; 
-}
+
 .event.startEvent > circle {
 	fill: #57A14C;
 }
