removed prefix and renamed label into BPMNLabel
Issue #84

--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -67,14 +67,14 @@
     fill: transparent;
 }
 
-.bpmn.label > .sprotty-node {
+.BPMNLabel > .sprotty-node {
 	fill: transparent;
 }
 
-.bpmn.label > .sprotty-label.heading {
+.BPMNLabel > .sprotty-label.heading {
 	fill: var(--theia-titleBar-activeForeground);
 }
-.bpmn.label > .sprotty-node.mouseover {
+.BPMNLabel > .sprotty-node.mouseover {
 	fill: var(--theia-activityBar-background);
 }
 
