layout , vertical labels
Issue #87

--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -141,10 +141,11 @@
     outline-offset: -1px;
 }
 
-.pool .header .sprotty-label {
+.pool .header text {
+	font-weight: normal;
+    font-size: 0.7em;
     fill: var(--theia-titleBar-activeForeground);
 }
-
 
 /* sequence flow */
 .sprotty-edge.sequenceflow:not(.selected),
