--- a/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
+++ b/open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
@@ -115,6 +115,17 @@
     fill: #C39D5C;
 }
 
+
+.dataObject > .sprotty-node {
+	opacity: 80%;
+	stroke: var(--theia-focusBorder);
+    outline-color: var(--theia-focusBorder);
+    outline-style: solid;
+    outline-width: 1px;
+}
+
+/*** Pool and Lances **/
+
 .pool > .sprotty-node {
     fill: var(--theia-titleBar-activeBackground);
     opacity: 70%;
